bindings/c/xlpp_capi.h

typedef struct xlpp_worksheet_t*   xlpp_worksheet;
typedef struct xlpp_cell_t*        xlpp_cell;
typedef struct xlpp_font_t*        xlpp_font;
typedef struct xlpp_fill_t*        xlpp_fill;
typedef struct xlpp_border_t*      xlpp_border;
typedef struct xlpp_borderside_t*  xlpp_borderside;
typedef struct xlpp_alignment_t*   xlpp_alignment;
typedef struct xlpp_properties_t*  xlpp_properties;
typedef struct xlpp_chart_t*        xlpp_chart;
typedef struct xlpp_chart_series_t* xlpp_chart_series;
// ============================================================
// Properties
// ============================================================
XLPP_API void xlpp_properties_set_title(xlpp_properties p, const char* v);
XLPP_API void xlpp_properties_set_creator(xlpp_properties p, const char* v);
XLPP_API void xlpp_properties_set_subject(xlpp_properties p, const char* v);
XLPP_API const char* xlpp_properties_get_title(xlpp_properties p);
XLPP_API const char* xlpp_properties_get_creator(xlpp_properties p);
XLPP_API const char* xlpp_properties_get_subject(xlpp_properties p);
XLPP_API void xlpp_properties_set_description(xlpp_properties p, const char* v);
XLPP_API const char* xlpp_properties_get_description(xlpp_properties p);
// ============================================================
// Worksheet
// ============================================================
XLPP_API const char*  xlpp_sheet_name(xlpp_worksheet ws);
XLPP_API void         xlpp_sheet_rename(xlpp_worksheet ws, const char* name);
// ============================================================
// Cell
// ============================================================
XLPP_API const char*  xlpp_cell_address(xlpp_cell c);
XLPP_API uint64_t     xlpp_cell_row(xlpp_cell c);
XLPP_API uint64_t     xlpp_cell_column(xlpp_cell c);
XLPP_API int          xlpp_cell_value_type(xlpp_cell c);
XLPP_API int          xlpp_cell_get_bool(xlpp_cell c);
XLPP_API double       xlpp_cell_get_number(xlpp_cell c);
XLPP_API const char*  xlpp_cell_get_string(xlpp_cell c);
XLPP_API int          xlpp_cell_is_empty(xlpp_cell c);
XLPP_API void         xlpp_cell_set_string(xlpp_cell c, const char* v);
XLPP_API void         xlpp_cell_set_number(xlpp_cell c, double v);
XLPP_API void         xlpp_cell_set_bool(xlpp_cell c, int v);
XLPP_API const char*  xlpp_cell_get_formula(xlpp_cell c);
XLPP_API void         xlpp_cell_set_formula(xlpp_cell c, const char* f);
XLPP_API int          xlpp_cell_has_formula(xlpp_cell c);
XLPP_API void         xlpp_cell_clear_formula(xlpp_cell c);
XLPP_API int          xlpp_cell_has_hyperlink(xlpp_cell c);
XLPP_API void         xlpp_cell_clear_hyperlink(xlpp_cell c);
XLPP_API int          xlpp_cell_has_comment(xlpp_cell c);
XLPP_API void         xlpp_cell_clear_comment(xlpp_cell c);
XLPP_API const char*  xlpp_cell_get_number_format(xlpp_cell c);
XLPP_API void         xlpp_cell_set_number_format(xlpp_cell c, const char* value);
XLPP_API xlpp_font    xlpp_cell_font(xlpp_cell c);
XLPP_API xlpp_fill    xlpp_cell_fill(xlpp_cell c);
XLPP_API xlpp_border  xlpp_cell_border(xlpp_cell c);
XLPP_API xlpp_alignment xlpp_cell_alignment(xlpp_cell c);
// ============================================================
// Font
// ============================================================
XLPP_API void         xlpp_font_set_name(xlpp_font f, const char* v);
XLPP_API void         xlpp_font_set_size(xlpp_font f, double v);
XLPP_API void         xlpp_font_set_bold(xlpp_font f, int v);
XLPP_API void         xlpp_font_set_italic(xlpp_font f, int v);
XLPP_API void         xlpp_font_set_color(xlpp_font f, const char* argb);
XLPP_API const char*  xlpp_font_get_name(xlpp_font f);
XLPP_API double       xlpp_font_get_size(xlpp_font f);
XLPP_API int          xlpp_font_get_bold(xlpp_font f);
// ============================================================
// Border
// ============================================================
XLPP_API xlpp_borderside xlpp_border_left(xlpp_border b);
XLPP_API xlpp_borderside xlpp_border_right(xlpp_border b);
XLPP_API xlpp_borderside xlpp_border_top(xlpp_border b);
XLPP_API xlpp_borderside xlpp_border_bottom(xlpp_border b);
XLPP_API void         xlpp_borderside_set_style(xlpp_borderside s, const char* v);
// ============================================================
// Alignment
// ============================================================
XLPP_API void         xlpp_alignment_set_horizontal(xlpp_alignment a, const char* v);
XLPP_API void         xlpp_alignment_set_wrap_text(xlpp_alignment a, int v);
XLPP_API xlpp_chart xlpp_chart_create(int type);
XLPP_API void xlpp_chart_destroy(xlpp_chart chart);
XLPP_API void xlpp_chart_set_title(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_set_x_axis_title(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_set_y_axis_title(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_set_style(xlpp_chart chart, const char* style);
XLPP_API void xlpp_chart_set_grouping(xlpp_chart chart, int grouping);
XLPP_API void xlpp_chart_set_size(xlpp_chart chart, int width, int height);
XLPP_API void xlpp_chart_set_legend(xlpp_chart chart, int show, const char* position);
XLPP_API xlpp_chart_series xlpp_chart_add_series(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_series_set_values_reference(xlpp_chart_series series, const char* reference);
XLPP_API void xlpp_chart_series_set_categories_reference(xlpp_chart_series series, const char* reference);