bindings/csharp/XlppNet.cs


        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void xlpp_cell_clear_formula(IntPtr c);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xlpp_cell_has_hyperlink(IntPtr c);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void xlpp_cell_clear_hyperlink(IntPtr c);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xlpp_cell_has_comment(IntPtr c);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void xlpp_cell_clear_comment(IntPtr c);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_cell_get_number_format(IntPtr c);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void xlpp_cell_set_number_format(IntPtr c, string value);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_cell_font(IntPtr c);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_cell_fill(IntPtr c);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_cell_border(IntPtr c);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_cell_alignment(IntPtr c);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void xlpp_font_set_name(IntPtr f, string v);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void xlpp_font_set_size(IntPtr f, double v);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void xlpp_font_set_bold(IntPtr f, int v);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void xlpp_font_set_italic(IntPtr f, int v);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void xlpp_font_set_color(IntPtr f, string argb);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_font_get_name(IntPtr f);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern double xlpp_font_get_size(IntPtr f);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xlpp_font_get_bold(IntPtr f);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_border_left(IntPtr b);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_border_right(IntPtr b);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_border_top(IntPtr b);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr xlpp_border_bottom(IntPtr b);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void xlpp_borderside_set_style(IntPtr s, string v);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        public static extern void xlpp_alignment_set_horizontal(IntPtr a, string v);
        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl)]
        public static extern void xlpp_alignment_set_wrap_text(IntPtr a, int v);
    }

    // === Value types ===
    public enum CellValueType { Empty = 0, Bool = 1, Number = 2, String = 3, Error = 4, Date = 5 }
    public enum ChartType { Bar = 0, Line = 1, Pie = 2, Scatter = 3, Doughnut = 4, Radar = 5, Area = 6, Bubble = 7 }

    // === OOP wrappers ===
    internal static class MarshalHelper
    {
        public static string PtrToString(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero) return "";
            return Marshal.PtrToStringAnsi(ptr) ?? "";
        }
    }

    public class Font
    {
        internal IntPtr _handle;
        internal Font(IntPtr h) => _handle = h;
        public void SetName(string v) => Native.xlpp_font_set_name(_handle, v);
        public void SetSize(double v) => Native.xlpp_font_set_size(_handle, v);
        public void SetBold(bool v) => Native.xlpp_font_set_bold(_handle, v ? 1 : 0);
        public void SetItalic(bool v) => Native.xlpp_font_set_italic(_handle, v ? 1 : 0);
        public void SetColor(string argb) => Native.xlpp_font_set_color(_handle, argb);
        public string Name => MarshalHelper.PtrToString(Native.xlpp_font_get_name(_handle));
        public double Size => Native.xlpp_font_get_size(_handle);
        public bool Bold => Native.xlpp_font_get_bold(_handle) != 0;
    }

    public class Fill
    {
        internal IntPtr _handle;
        internal Fill(IntPtr h) => _handle = h;
    }

    public class BorderSide
    {
        internal IntPtr _handle;
        internal BorderSide(IntPtr h) => _handle = h;
        public void SetStyle(string v) => Native.xlpp_borderside_set_style(_handle, v);
    }

    public class Border
    {
        internal IntPtr _handle;
        internal Border(IntPtr h) => _handle = h;
        public BorderSide Left => new(Native.xlpp_border_left(_handle));
        public BorderSide Right => new(Native.xlpp_border_right(_handle));
        public BorderSide Top => new(Native.xlpp_border_top(_handle));
        public BorderSide Bottom => new(Native.xlpp_border_bottom(_handle));
    }

    public class Alignment
    {
        internal IntPtr _handle;
        internal Alignment(IntPtr h) => _handle = h;
        public void SetHorizontal(string v) => Native.xlpp_alignment_set_horizontal(_handle, v);
        public void SetWrapText(bool v) => Native.xlpp_alignment_set_wrap_text(_handle, v ? 1 : 0);
    }

    public class Properties
    {
        internal IntPtr _handle;
        internal Properties(IntPtr h) => _handle = h;
        public string Title { get => MarshalHelper.PtrToString(Native.xlpp_properties_get_title(_handle)); set => Native.xlpp_properties_set_title(_handle, value ?? ""); }
        public string Creator { get => MarshalHelper.PtrToString(Native.xlpp_properties_get_creator(_handle)); set => Native.xlpp_properties_set_creator(_handle, value ?? ""); }
        public string Subject { get => MarshalHelper.PtrToString(Native.xlpp_properties_get_subject(_handle)); set => Native.xlpp_properties_set_subject(_handle, value ?? ""); }
        public string Description { get => MarshalHelper.PtrToString(Native.xlpp_properties_get_description(_handle)); set => Native.xlpp_properties_set_description(_handle, value ?? ""); }
    }

    public class Cell
    {
        internal IntPtr _handle;
        internal Cell(IntPtr h) => _handle = h;

        public CellValueType ValueType => (CellValueType)Native.xlpp_cell_value_type(_handle);
        public bool IsEmpty => Native.xlpp_cell_is_empty(_handle) != 0;
        public string Address => MarshalHelper.PtrToString(Native.xlpp_cell_address(_handle));
        public ulong Row => Native.xlpp_cell_row(_handle);
        public ulong Column => Native.xlpp_cell_column(_handle);

        public object? Value
        {
            get => ValueType switch
            {
                CellValueType.Bool => Native.xlpp_cell_get_bool(_handle) != 0,
                CellValueType.Number => Native.xlpp_cell_get_number(_handle),
                CellValueType.String => MarshalHelper.PtrToString(Native.xlpp_cell_get_string(_handle)),
                CellValueType.Empty => null,
                _ => null
            };
            set
            {
                if (value == null) return;
                switch (value)
                {
                    case string s: Native.xlpp_cell_set_string(_handle, s); break;
                    case double d: Native.xlpp_cell_set_number(_handle, d); break;
                    case int i: Native.xlpp_cell_set_number(_handle, i); break;
                    case long l: Native.xlpp_cell_set_number(_handle, l); break;
                    case float f: Native.xlpp_cell_set_number(_handle, f); break;
                    case bool b: Native.xlpp_cell_set_bool(_handle, b ? 1 : 0); break;
                }
            }
        }

        public string? Formula
        {
            get => MarshalHelper.PtrToString(Native.xlpp_cell_get_formula(_handle));
            set => Native.xlpp_cell_set_formula(_handle, value ?? "");
        }

        public bool HasFormula => Native.xlpp_cell_has_formula(_handle) != 0;
        public void ClearFormula() => Native.xlpp_cell_clear_formula(_handle);
        public bool HasHyperlink => Native.xlpp_cell_has_hyperlink(_handle) != 0;
        public void ClearHyperlink() => Native.xlpp_cell_clear_hyperlink(_handle);
        public bool HasComment => Native.xlpp_cell_has_comment(_handle) != 0;
        public void ClearComment() => Native.xlpp_cell_clear_comment(_handle);
        public string NumberFormat
        {
            get => MarshalHelper.PtrToString(Native.xlpp_cell_get_number_format(_handle));
            set => Native.xlpp_cell_set_number_format(_handle, value ?? "General");
        }

        public Font Font => new(Native.xlpp_cell_font(_handle));
        public Fill Fill => new(Native.xlpp_cell_fill(_handle));
        public Border Border => new(Native.xlpp_cell_border(_handle));
        public Alignment Alignment => new(Native.xlpp_cell_alignment(_handle));
    }

    public sealed class Chart : IDisposable
    {
        internal IntPtr _handle;
        public Chart(ChartType type = ChartType.Bar) { _handle = Native.xlpp_chart_create((int)type); if (_handle == IntPtr.Zero) throw new ArgumentException($"Invalid chart type: {Workbook.LastError}"); }
        public void Dispose() { if (_handle != IntPtr.Zero) { Native.xlpp_chart_destroy(_handle); _handle = IntPtr.Zero; } }
        public string Title { set => Native.xlpp_chart_set_title(_handle, value ?? ""); }
        public string XAxisTitle { set => Native.xlpp_chart_set_x_axis_title(_handle, value ?? ""); }
        public string YAxisTitle { set => Native.xlpp_chart_set_y_axis_title(_handle, value ?? ""); }
        public string Style { set => Native.xlpp_chart_set_style(_handle, value ?? ""); }
        public int Grouping { set => Native.xlpp_chart_set_grouping(_handle, value); }
        public void SetSize(int width, int height) => Native.xlpp_chart_set_size(_handle, width, height);
        public void SetLegend(bool show, string position = "r") => Native.xlpp_chart_set_legend(_handle, show ? 1 : 0, position);
        public ChartSeries AddSeries(string title) => new(Native.xlpp_chart_add_series(_handle, title));
        internal IntPtr Detach() { var handle = _handle; _handle = IntPtr.Zero; return handle; }
    }

    public sealed class ChartSeries
    {
        internal IntPtr _handle;
        internal ChartSeries(IntPtr handle) => _handle = handle;
        public string ValuesReference { set => Native.xlpp_chart_series_set_values_reference(_handle, value ?? ""); }
        public string CategoriesReference { set => Native.xlpp_chart_series_set_categories_reference(_handle, value ?? ""); }
    }

    public class Worksheet
    {
        internal IntPtr _handle;
        internal Worksheet(IntPtr h) => _handle = h;

        public string Name => MarshalHelper.PtrToString(Native.xlpp_sheet_name(_handle));
        public void Rename(string name) => Native.xlpp_sheet_rename(_handle, name);
